updated footer layout, removed sliders, and add testimonial cards

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -185,74 +185,42 @@ section:not(.banner) {
 }
 
 // testimonials
-
-.slider {
+.testimonial__card {
   position: relative;
-  width: 100%;
-  height: 285px;
-  display: grid;
-  grid-template-columns: 35px 1fr 35px;
-  grid-template-rows: 50% 50%;
-  background-image: linear-gradient(
-      0deg,
-      rgba(28, 43, 61, 0.5),
-      rgba(28, 43, 61, 0.5)
-    ),
-    url('../assets/surfer-4234061_1920.webp');
-  background-size: cover;
-  background-position: center;
-  color: #fff;
-  border-radius: $border-radius;
+  padding: 2rem;
+  box-shadow: 0 2px 5px rgba(000, 000, 000, 0.4);
+  border-radius: 15px;
+  margin-top: 3.5rem;
   overflow: hidden;
-  &__controls__prev,
-  &__controls__next {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100%;
-    width: 100%;
-    background-color: rgba(28, 43, 61, 0.2);
-    transition: color 0.3s ease-in-out, background-color 0.3s ease-in-out;
-  }
-  &__controls__prev {
-    grid-column: 1/2;
-    grid-row: 1/-1;
-  }
-  &__controls__next {
-    grid-column: 3/-1;
-    grid-row: 1/-1;
-  }
-  &__text {
-    grid-row: 1/-1;
-    place-self: end;
-    padding: 1rem;
-    font-family: 'Prompt', sans-serif;
-    text-align: center;
-  }
-  &__name {
-    font-weight: 400;
-  }
-  &__controls__dots {
-    margin-top: 1.25rem;
-    display: flex;
-    justify-content: center;
-    .dot {
-      width: 25px;
-      height: 25px;
-      border-radius: 50%;
-      border: 1px solid $accent_green;
-      margin-left: 1rem;
-      transition: background-color 0.3s ease-in-out;
-      &.active {
-        background-color: $accent_green;
-      }
-    }
-  }
+}
+
+.testimonial__card::before {
+  content: '';
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 24%;
+  background-image: url('../assets/waves.svg');
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+.testimonial__img img {
+  border-radius: 50%;
+  height: 50px;
+  width: 50px;
+}
+.testimonial__name {
+  margin: 0.5rem 0;
+}
+.card__testimonial {
+  position: relative;
+  z-index: 100;
 }
 // home page cards
 .home__card,
 .card {
-  margin-top: 5rem;
+  margin-top: 3.5rem;
   width: 100%;
   display: flex;
   justify-content: end;
@@ -419,14 +387,14 @@ section:not(.banner) {
   font-weight: 500;
   margin-top: 5rem;
   &__logo {
-    width: 162px;
-    height: 28px;
+    width: 250px;
+    height: 50px;
     background-image: url('../assets/footer-logo.svg');
     background-size: contain;
     background-repeat: no-repeat;
     background-repeat: none;
     background-position: center;
-    margin-bottom: 2rem;
+    margin-bottom: 1.5rem;
   }
 
   &__list {
@@ -438,13 +406,14 @@ section:not(.banner) {
   &__link {
     color: $white;
     font-family: 'Kalam', cursive;
-    font-size: 1.5rem;
+    font-size: 1.2rem;
     text-decoration: none;
   }
   .phone {
     display: flex;
     align-items: center;
     margin-top: 1.5rem;
+    font-size: 1.2rem;
     i {
       margin-right: 1rem;
     }
@@ -452,6 +421,7 @@ section:not(.banner) {
 
   address {
     margin: 1.5rem 0;
+    font-size: 1.2rem
   }
   .hidden {
     clip: rect(1px, 1px, 1px, 1px);
@@ -472,9 +442,10 @@ section:not(.banner) {
   .social {
     display: flex;
     align-items: center;
+    margin-top: 1rem;
     &__icon {
       color: $white;
-      font-size: 2rem;
+      font-size: 1.8rem;
       margin-right: 1rem;
       transition: color 0.3s ease-in-out;
     }
@@ -511,14 +482,19 @@ section:not(.banner) {
   }
 }
 
-@media (min-width: 425px) {
+@media (min-width: 375px) {
   .container {
     padding: 0 1rem;
   }
 }
-@media (min-width: 768px) {
+@media (min-width: 425px) {
   .container {
     padding: 0 1.5rem;
+  }
+}
+@media (min-width: 768px) {
+  .container {
+    padding: 0 2rem;
   }
   .heading--xxl {
     font-size: 5rem;
@@ -537,6 +513,16 @@ section:not(.banner) {
   .about__imgs {
     grid-template-rows: 250px 250px;
   }
+  .testimonial__cards {
+    display: flex;
+    justify-content: space-between;
+  }
+  .testimonial__card {
+    margin: 0 0 0 1rem;
+    &:nth-child(1) {
+      margin: 0;
+    }
+  }
   .home__cards {
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -547,7 +533,7 @@ section:not(.banner) {
     height: 300px;
   }
   .lessons {
-    grid-column: 1 /-1;
+    grid-column: 1 / -1;
   }
   .cards {
     display: flex;
@@ -613,7 +599,7 @@ section:not(.banner) {
       color: $primary-100;
       font-family: 'Kalam', cursive;
       text-transform: capitalize;
-      font-size: 1.5rem;
+      font-size: 1.2rem;
       width: min-content;
       margin-left: 3rem;
       &.active::before {
@@ -638,15 +624,20 @@ section:not(.banner) {
     align-items: start;
     &__imgs {
       max-width: 50%;
+      margin-top: 0;
+      grid-template-rows: 200px 200px;
     }
     &__text {
       width: 50%;
       margin-right: 5rem;
     }
   }
-  .slider {
-    height: 500px;
-  }
+ .home__cards {
+   grid-template-columns: 1fr 1fr 1fr;
+ }
+ .lessons {
+   grid-column: initial;
+ }
   .faq__content {
     display: flex;
     justify-content: space-between;
@@ -668,16 +659,15 @@ section:not(.banner) {
   .contact {
     position: relative;
   }
-  .contact::before {
-    content: '';
-    width: 510px;
-    height: 430px;
-    background-image: url('../assets/pexels-kindel-media-7425984.webp');
-    background-size: cover;
-    position: absolute;
-    right: 1.5rem;
-    bottom: 0;
-    border-radius: $border-radius;
+  .contact__content {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  .watermelon {
+    margin-left: 3rem;
+    border-radius: 15px;
+    height: 500px;
   }
   .form {
     width: 50%;
@@ -685,54 +675,47 @@ section:not(.banner) {
   .footer .container {
     position: relative;
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
     grid-template-rows: 50px min-content;
     padding-bottom: 1rem;
     place-content: end;
     gap: 1rem;
+    align-items: baseline;
   }
-  .footer__nav {
-    grid-row: 2 / -1;
-    grid-column: 1/3;
-  }
-  .footer__list {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-  }
-  .phone {
-    grid-column: 2/3;
-    grid-row: 2/-1;
-    place-self: start;
-    margin-top: 60%;
-    margin-left: -7px;
-  }
-  address,
-  .social {
-    grid-row: 2/-1;
-    grid-column: 3 / -1;
-  }
-  .social {
-    place-self: start;
-    margin-top: 60%;
-  }
+  
   .footer .social__icon {
     font-size: 1.8rem;
   }
+  .footer__nav {
+    grid-column: 1/2;
+  }
+  .footer__nav.secondary {
+    grid-row: 2/ -1;
+    grid-column: 2/3;
+  }
+  .footer .other__contact {
+    grid-column: 4/-1;
+    grid-row: 2/-1;
+  }
   .footer address {
     margin-top: 0;
+    grid-row: 2/ -1;
+    grid-column: 3 / 4;
   }
   .copyright {
     position: absolute;
-    bottom: 0;
+    bottom: -1rem;
     left: 0;
     width: 100%;
     text-align: center;
   }
 }
 @media (min-width: 1440px) {
-  .phone,
-  .social {
-    margin-top: 47%;
+  .testimonial__card {
+    margin: 0 0 0 2rem;
+    &:nth-child(1) {
+      margin: 0;
+    }
   }
 }
 @media (pointer: fine) {
@@ -747,12 +730,5 @@ section:not(.banner) {
   .social__icon:hover {
     color: #1c2b3d;
   }
-  .dot:hover {
-    background-color: #00828970;
-  }
-  .slider__controls__prev:hover,
-  .slider__controls__next:hover {
-    background-color: rgba(28, 43, 61, 0.3);
-    color: rgba(13, 187, 196, 0.466);
-  }
+
 }
