--- a/public/css/style.css
+++ b/public/css/style.css
@@ -284,67 +284,45 @@ section:not(.banner) {
   grid-column: 1/-1;
 }
 
-.slider {
+.testimonial__card {
   position: relative;
-  width: 100%;
-  height: 285px;
-  display: grid;
-  grid-template-columns: 35px 1fr 35px;
-  grid-template-rows: 50% 50%;
-  background-image: linear-gradient(0deg, rgba(28, 43, 61, 0.5), rgba(28, 43, 61, 0.5)), url("../assets/surfer-4234061_1920.webp");
-  background-size: cover;
-  background-position: center;
-  color: #fff;
+  padding: 2rem;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.4);
   border-radius: 15px;
+  margin-top: 3.5rem;
   overflow: hidden;
 }
-.slider__controls__prev, .slider__controls__next {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100%;
+
+.testimonial__card::before {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
   width: 100%;
-  background-color: rgba(28, 43, 61, 0.2);
-  transition: color 0.3s ease-in-out, background-color 0.3s ease-in-out;
+  height: 24%;
+  background-image: url("../assets/waves.svg");
+  background-repeat: no-repeat;
+  background-size: cover;
 }
-.slider__controls__prev {
-  grid-column: 1/2;
-  grid-row: 1/-1;
-}
-.slider__controls__next {
-  grid-column: 3/-1;
-  grid-row: 1/-1;
-}
-.slider__text {
-  grid-row: 1/-1;
-  place-self: end;
-  padding: 1rem;
-  font-family: "Prompt", sans-serif;
-  text-align: center;
-}
-.slider__name {
-  font-weight: 400;
-}
-.slider__controls__dots {
-  margin-top: 1.25rem;
-  display: flex;
-  justify-content: center;
-}
-.slider__controls__dots .dot {
-  width: 25px;
-  height: 25px;
+
+.testimonial__img img {
   border-radius: 50%;
-  border: 1px solid #008289;
-  margin-left: 1rem;
-  transition: background-color 0.3s ease-in-out;
+  height: 50px;
+  width: 50px;
 }
-.slider__controls__dots .dot.active {
-  background-color: #008289;
+
+.testimonial__name {
+  margin: 0.5rem 0;
+}
+
+.card__testimonial {
+  position: relative;
+  z-index: 100;
 }
 
 .home__card,
 .card {
-  margin-top: 5rem;
+  margin-top: 3.5rem;
   width: 100%;
   display: flex;
   justify-content: end;
@@ -489,14 +467,14 @@ section:not(.banner) {
   margin-top: 5rem;
 }
 .footer__logo {
-  width: 162px;
-  height: 28px;
+  width: 250px;
+  height: 50px;
   background-image: url("../assets/footer-logo.svg");
   background-size: contain;
   background-repeat: no-repeat;
   background-repeat: none;
   background-position: center;
-  margin-bottom: 2rem;
+  margin-bottom: 1.5rem;
 }
 .footer__list {
   list-style-type: none;
@@ -507,19 +485,21 @@ section:not(.banner) {
 .footer__link {
   color: #fafafa;
   font-family: "Kalam", cursive;
-  font-size: 1.5rem;
+  font-size: 1.2rem;
   text-decoration: none;
 }
 .footer .phone {
   display: flex;
   align-items: center;
   margin-top: 1.5rem;
+  font-size: 1.2rem;
 }
 .footer .phone i {
   margin-right: 1rem;
 }
 .footer address {
   margin: 1.5rem 0;
+  font-size: 1.2rem;
 }
 .footer .hidden {
   clip: rect(1px, 1px, 1px, 1px);
@@ -539,10 +519,11 @@ section:not(.banner) {
 .footer .social {
   display: flex;
   align-items: center;
+  margin-top: 1rem;
 }
 .footer .social__icon {
   color: #fafafa;
-  font-size: 2rem;
+  font-size: 1.8rem;
   margin-right: 1rem;
   transition: color 0.3s ease-in-out;
 }
@@ -576,14 +557,19 @@ section:not(.banner) {
   background-color: #1c2b3d;
 }
 
-@media (min-width: 425px) {
+@media (min-width: 375px) {
   .container {
     padding: 0 1rem;
   }
 }
-@media (min-width: 768px) {
+@media (min-width: 425px) {
   .container {
     padding: 0 1.5rem;
+  }
+}
+@media (min-width: 768px) {
+  .container {
+    padding: 0 2rem;
   }
 
   .heading--xxl {
@@ -606,6 +592,18 @@ section:not(.banner) {
 
   .about__imgs {
     grid-template-rows: 250px 250px;
+  }
+
+  .testimonial__cards {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .testimonial__card {
+    margin: 0 0 0 1rem;
+  }
+  .testimonial__card:nth-child(1) {
+    margin: 0;
   }
 
   .home__cards {
@@ -695,7 +693,7 @@ section:not(.banner) {
     color: #1c2b3d;
     font-family: "Kalam", cursive;
     text-transform: capitalize;
-    font-size: 1.5rem;
+    font-size: 1.2rem;
     width: min-content;
     margin-left: 3rem;
   }
@@ -722,14 +720,20 @@ section:not(.banner) {
   }
   .about__imgs {
     max-width: 50%;
+    margin-top: 0;
+    grid-template-rows: 200px 200px;
   }
   .about__text {
     width: 50%;
     margin-right: 5rem;
   }
 
-  .slider {
-    height: 500px;
+  .home__cards {
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+
+  .lessons {
+    grid-column: initial;
   }
 
   .faq__content {
@@ -759,16 +763,16 @@ section:not(.banner) {
     position: relative;
   }
 
-  .contact::before {
-    content: "";
-    width: 510px;
-    height: 430px;
-    background-image: url("../assets/pexels-kindel-media-7425984.webp");
-    background-size: cover;
-    position: absolute;
-    right: 1.5rem;
-    bottom: 0;
+  .contact__content {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  .watermelon {
+    margin-left: 3rem;
     border-radius: 15px;
+    height: 500px;
   }
 
   .form {
@@ -778,62 +782,52 @@ section:not(.banner) {
   .footer .container {
     position: relative;
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
     grid-template-rows: 50px min-content;
     padding-bottom: 1rem;
     place-content: end;
     gap: 1rem;
-  }
-
-  .footer__nav {
-    grid-row: 2/-1;
-    grid-column: 1/3;
-  }
-
-  .footer__list {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-  }
-
-  .phone {
-    grid-column: 2/3;
-    grid-row: 2/-1;
-    place-self: start;
-    margin-top: 60%;
-    margin-left: -7px;
-  }
-
-  address,
-.social {
-    grid-row: 2/-1;
-    grid-column: 3/-1;
-  }
-
-  .social {
-    place-self: start;
-    margin-top: 60%;
+    align-items: baseline;
   }
 
   .footer .social__icon {
     font-size: 1.8rem;
   }
 
+  .footer__nav {
+    grid-column: 1/2;
+  }
+
+  .footer__nav.secondary {
+    grid-row: 2/-1;
+    grid-column: 2/3;
+  }
+
+  .footer .other__contact {
+    grid-column: 4/-1;
+    grid-row: 2/-1;
+  }
+
   .footer address {
     margin-top: 0;
+    grid-row: 2/-1;
+    grid-column: 3/4;
   }
 
   .copyright {
     position: absolute;
-    bottom: 0;
+    bottom: -1rem;
     left: 0;
     width: 100%;
     text-align: center;
   }
 }
 @media (min-width: 1440px) {
-  .phone,
-.social {
-    margin-top: 47%;
+  .testimonial__card {
+    margin: 0 0 0 2rem;
+  }
+  .testimonial__card:nth-child(1) {
+    margin: 0;
   }
 }
 @media (pointer: fine) {
@@ -849,15 +843,5 @@ section:not(.banner) {
   .footer__link:hover,
 .social__icon:hover {
     color: #1c2b3d;
-  }
-
-  .dot:hover {
-    background-color: rgba(0, 130, 137, 0.4392156863);
-  }
-
-  .slider__controls__prev:hover,
-.slider__controls__next:hover {
-    background-color: rgba(28, 43, 61, 0.3);
-    color: rgba(13, 187, 196, 0.466);
   }
 }
