--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -74,7 +74,7 @@ label {
   top: 100%;
   left: 0;
   width: 100%;
-  height: 100vh;
+  height: 90vh;
   background: linear-gradient(
       0deg,
       rgba(0, 130, 137, 0.5),
@@ -411,6 +411,7 @@ section:not(.banner) {
     font-family: 'Kalam', cursive;
     font-size: 1.2rem;
     text-decoration: none;
+    transition: color 0.3s ease-in-out;
   }
   .phone {
     display: flex;
@@ -569,7 +570,7 @@ section:not(.banner) {
 @media (min-width: 1024px) {
   .header {
     position: relative;
-    padding: 0.5rem 0;
+    padding: 1rem 0;
     .container {
       display: flex;
       justify-content: space-between;
@@ -588,7 +589,8 @@ section:not(.banner) {
   }
   .logo {
     width: 200px;
-    height: 60px;
+    height: 1.5rem;
+    background-size: 100%;
   }
   .nav__list {
     all: unset;
