--- a/public/css/style.css
+++ b/public/css/style.css
@@ -126,7 +126,7 @@ label {
 }
 
 .heading--xxl {
-  font-size: 2.3rem;
+  font-size: 2.1rem;
 }
 
 .heading--l {
@@ -150,8 +150,14 @@ label {
 }
 
 .header {
-  position: relative;
+  position: fixed;
   padding: 0.5rem 0;
+  top: 0;
+  left: 0;
+  z-index: 10000;
+  background-color: #fafafa;
+  width: 100%;
+  box-shadow: 0 2px 5px hsla(212deg, 37%, 17%, 0.401);
 }
 .header .container {
   display: flex;
@@ -209,6 +215,14 @@ label {
 }
 .nav.open {
   transform: scale(1, 1);
+}
+
+.body--overflow {
+  overflow: hidden;
+}
+
+.main {
+  margin-top: 3rem;
 }
 
 .banner {
@@ -383,7 +397,7 @@ section:not(.banner) {
 
 .faq__list {
   list-style-type: none;
-  margin-bottom: 5rem;
+  margin: 5rem 0;
 }
 .faq__btn {
   background-color: transparent;
@@ -561,6 +575,10 @@ section:not(.banner) {
   background-color: #1c2b3d;
 }
 
+.pricing__img {
+  margin-top: 1.5rem;
+}
+
 @media (min-width: 375px) {
   .container {
     padding: 0 1rem;
@@ -612,17 +630,13 @@ section:not(.banner) {
 
   .home__cards {
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr;
     gap: 1rem;
   }
 
   .home__card {
     margin-top: 0;
     height: 300px;
-  }
-
-  .lessons {
-    grid-column: 1/-1;
   }
 
   .cards {
@@ -654,10 +668,17 @@ section:not(.banner) {
   .iframe__map {
     height: 350px;
   }
+
+  .lottie__faq {
+    height: 400px;
+  }
+
+  .watermelon {
+    width: 100%;
+  }
 }
 @media (min-width: 1024px) {
   .header {
-    position: relative;
     padding: 1rem 0;
   }
   .header .container {
@@ -737,6 +758,10 @@ section:not(.banner) {
     margin-right: 5rem;
   }
 
+  .table {
+    width: 50%;
+  }
+
   .home__cards {
     grid-template-columns: 1fr 1fr 1fr;
   }
@@ -749,10 +774,19 @@ section:not(.banner) {
     display: flex;
     justify-content: space-between;
     align-items: flex-start;
+    flex-direction: row-reverse;
+  }
+
+  .home--faq {
+    flex-direction: row;
+  }
+
+  .faq__list {
+    margin: 0 0 5rem 0;
   }
 
   .iframe__map {
-    height: 600px;
+    height: 400px;
     width: 40%;
   }
 
@@ -764,12 +798,26 @@ section:not(.banner) {
     margin-left: 1rem;
   }
 
-  lottie-player {
+  .lottie {
     width: 50%;
   }
 
-  .contact {
-    position: relative;
+  .pricing__content {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  .pricing__img {
+    height: 240px;
+    width: auto;
+    margin-top: 0;
+  }
+  .pricing__img img {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+    border-radius: 15px;
   }
 
   .contact__content {
@@ -780,7 +828,6 @@ section:not(.banner) {
 
   .watermelon {
     margin-left: 3rem;
-    border-radius: 15px;
     height: 500px;
   }
 
