--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -29,7 +29,7 @@ label {
   font-size: 1rem;
 }
 .heading--xxl {
-  font-size: 2.3rem;
+  font-size: 2.1rem;
 }
 .heading--l {
   font-size: 2rem;
@@ -50,8 +50,14 @@ label {
   background-position: center;
 }
 .header {
-  position: relative;
+  position: fixed;
   padding: 0.5rem 0;
+  top: 0;
+  left: 0;
+  z-index: 10000;
+  background-color: $white;
+  width: 100%;
+  box-shadow: 0 2px 5px hsla(212, 37%, 17%, 0.401);
   .container {
     display: flex;
     justify-content: space-between;
@@ -112,6 +118,12 @@ label {
   &.open {
     transform: scale(1, 1);
   }
+}
+.body--overflow {
+  overflow: hidden;
+}
+.main {
+  margin-top: 3rem;
 }
 // banner
 .banner {
@@ -297,7 +309,7 @@ section:not(.banner) {
 .faq {
   &__list {
     list-style-type: none;
-    margin-bottom: 5rem;
+    margin: 5rem 0;
   }
   &__btn {
     background-color: transparent;
@@ -486,6 +498,10 @@ section:not(.banner) {
   }
 }
 
+.pricing__img {
+  margin-top: 1.5rem;
+}
+
 @media (min-width: 375px) {
   .container {
     padding: 0 1rem;
@@ -529,15 +545,12 @@ section:not(.banner) {
   }
   .home__cards {
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr;
     gap: 1rem;
   }
   .home__card {
     margin-top: 0;
     height: 300px;
-  }
-  .lessons {
-    grid-column: 1 / -1;
   }
   .cards {
     display: flex;
@@ -566,10 +579,16 @@ section:not(.banner) {
   .iframe__map {
     height: 350px;
   }
+  .lottie__faq {
+    height: 400px;
+  }
+  .watermelon {
+   width: 100%;
+  }
 }
 @media (min-width: 1024px) {
   .header {
-    position: relative;
+    // position: relative;
     padding: 1rem 0;
     .container {
       display: flex;
@@ -641,6 +660,9 @@ section:not(.banner) {
       margin-right: 5rem;
     }
   }
+  .table {
+    width: 50%;
+  }
  .home__cards {
    grid-template-columns: 1fr 1fr 1fr;
  }
@@ -651,9 +673,16 @@ section:not(.banner) {
     display: flex;
     justify-content: space-between;
     align-items: flex-start;
+    flex-direction: row-reverse;
+  }
+  .home--faq {
+    flex-direction: row;
+  }
+  .faq__list {
+    margin: 0 0 5rem 0;
   }
   .iframe__map {
-    height: 600px;
+    height: 400px;
     width: 40%;
   }
   .faq__paragraph {
@@ -662,11 +691,24 @@ section:not(.banner) {
   .faq i {
     margin-left: 1rem;
   }
-  lottie-player {
+  .lottie {
     width: 50%;
   }
-  .contact {
-    position: relative;
+  .pricing__content {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  .pricing__img {
+   height: 240px;
+   width: auto;
+    margin-top: 0;
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: contain;
+      border-radius: 15px;
+    }
   }
   .contact__content {
     display: flex;
@@ -675,7 +717,6 @@ section:not(.banner) {
   }
   .watermelon {
     margin-left: 3rem;
-    border-radius: 15px;
     height: 500px;
   }
   .form {
